force-app/main/default/objects/AppointmentStates__mdt/AppointmentStates__mdt.object-meta.xml
<CustomObject>
    <label>AppointmentStates</label>
    <pluralLabel>AppointmentStates</pluralLabel>
</CustomObject>