force-app/main/default/objects/AppointmentStates__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>CountryCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>