force-app/main/default/objects/AppointmentStates__mdt/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <label>StateCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>