force-app/main/default/objects/AppointmentStates__mdt/fields/StateName__c.field-meta.xml
<CustomField>
    <fullName>StateName__c</fullName>
    <label>StateName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>